--- a/navbar.css
+++ b/navbar.css
@@ -1,83 +1,36 @@
-@media (min-width:500px) {
-	#navbar {
-		list-style-type: none;
-		background-color: rgb(100,100,100);
-		height: 50px;
-		float: top;
-		margin: 0px auto;
-		overflow: hidden;
-		text-align: center;
-		z-index: 1;
-	}
-
-	#navbar li {
-		display: inline;
-	}
-
-	.nav-button {
-		display: inline-block;
-		color: rgb(50,50,50);	
-		font-family: verdana, sans-serif;
-		text-decoration: none;
-		padding: 14px 20px;
-		text-align: center;
-		/*position: relative;*/
-		margin: 0px 30px;
-		border-bottom: 4px solid black;
-		border-width: thin;
-	}
-	.nav-button:hover {
-		border-width: 5px;	
-		color: rgb(200,200,200);
-	}
-	.stickyspacer {
-		height: 50px;
-		width: 100%;
-	}
+body {
+	margin: 0px;
+	padding: 0px;
 }
 
-@media (max-width:500px) {
-	#navbar {
-		list-style-type: none;
-		background-color: rgb(100,100,100);
-		height: 150px;
-		width: 100%;
-		float: top;
-		margin: 0px;
-		overflow: hidden;
-		text-align: center;
-		z-index: 1;
-	}
-
-	#navbar li {
-		display: block;
-	}
-
-	.nav-button {
-		display: block;
-		color: rgb(50,50,50);	
-		font-family: verdana, sans-serif;
-		text-decoration: none;
-		left: 0px;	
-		padding: 14px 20px;
-		text-align: center;
-		/*position: relative;*/
-		margin: 0px 0px;
-		border-bottom: 4px solid black;
-		border-width: thin;
-	}
-	.nav-button:hover {
-		color: rgb(200,200,200);
-	}
-	.stickyspacer {
-		height: 150px !important;
-		width: 100%;
-	}
-	
+#navbar {
+	background-color: rgb(200, 200, 200);
+	height: 50px;
+	float: top;
+	margin: 0px;
+	overflow: hidden;
+	text-align: center;
 }
 
-.sticky {
-	position: fixed;
-	top: 0;
-	width: 100%;
+#navbar li {
+	display: inline;
+	text-decoration: none;
+}
+
+#navbar .nav-button {
+	/*float: top;*/
+	display: inline-block;
+	color: black;	
+	font-family: verdana, sans-serif;
+	text-decoration: none;
+	/*margin: auto auto;*/
+	padding: 14px 20px;
+	text-align: center;
+	background-color: rgb(200,200,200);
+	position: relative;
+}
+
+#navbar a:hover {
+	background-color: rgb(150,150,150);
+	color: black;
 }
