Made the projects dropdown mobile friendly

--- a/navbar.css
+++ b/navbar.css
@@ -42,11 +42,15 @@
   		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		z-index: 1;
 	}
+
+	#projects-dropdown:active #projects-dd-content {
+		display: block !important;
+	}
 	
 	#projects-dropdown:hover #projects-dd-content {
   		display: block !important;
 	}
-	
+
 	.project-link {
 		display: block;
 		padding: 15px;
@@ -115,7 +119,11 @@
 		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 		z-index: 1;
 	}
-	
+
+	#projects-dropdown:active #projects-dd-content {
+		display: inline-block !important;
+	}
+
 	#projects-dropdown:hover #projects-dd-content {
   		display: inline-block !important;
 	}
