--- a/navbar.css
+++ b/navbar.css
@@ -8,8 +8,7 @@
 		z-index: 1000;
 	}
 
-
-	#navbar div {
+	.nav {
 		display: inline-block;	
 	}
 
@@ -20,9 +19,10 @@
 		text-decoration: none;
 		padding: 14px 20px;
 		text-align: center;
-		/*position: relative;*/
+		position: relative;
 		margin: 0px 30px;
 		z-index: 1;
+		font-size: 100%;
 	}
 
 	.nav-button:hover {
@@ -33,9 +33,19 @@
   		position: relative;
   		display: inline-block;
 	}
+	#projects-dropdown button {
+		outline: none;
+		border: none;
+		background-color: rgb(0,0,0,0);
+	}
 
-	#projects-dd-content {
-		display: none !important;
+	.projects-dd-content-shown {
+		display: block !important;
+		
+	}
+
+	.projects-dd-content {
+		display: none;
 		position: absolute;
 		background-color: white;
 		color: black;
@@ -44,11 +54,7 @@
 		z-index: 1;
 	}
 
-	#projects-dropdown:active #projects-dd-content {
-		display: block !important;
-	}
-	
-	#projects-dropdown:hover #projects-dd-content {
+	#projects-dropdown:hover .projects-dd-content {
   		display: block !important;
 	}
 
