--- a/navbar.css
+++ b/navbar.css
@@ -26,6 +26,7 @@
 	}
 
 	.nav-button:hover {
+		background-color: rgb(70,70,70);
 		color: rgb(240,240,240);
 	}
 
@@ -33,7 +34,8 @@
   		position: relative;
   		display: inline-block;
 	}
-	#projects-dropdown button {
+
+	button {
 		outline: none;
 		border: none;
 		background-color: rgb(0,0,0,0);
@@ -99,15 +101,23 @@
 		font-family: verdana, sans-serif;
 		text-decoration: none;
 		left: 0px;	
-		padding: 14px 20px;
+		padding: 14.5px 20px;
 		text-align: center;
 		/*position: relative;*/
 		margin: 0px 0px;
 		border-bottom: 1px solid black;
+		font-size: 15px;
 	}
 
 	.nav-button:hover {
 		color: rgb(240,240,240);
+	}
+
+	button {
+		outline: none;
+		border: none;
+		background-color: rgb(0,0,0,0);
+		width: 100%;
 	}
 
 	#projects-dropdown {
@@ -116,8 +126,8 @@
 		width: 100%;
 	}
 
-	#projects-dd-content {
-		display: none !important;
+	.projects-dd-content {
+		display: none;
 		position: absolute;
 		background-color: white;
 		color: black;
@@ -127,11 +137,7 @@
 		z-index: 1;
 	}
 
-	#projects-dropdown:active #projects-dd-content {
-		display: inline-block !important;
-	}
-
-	#projects-dropdown:hover #projects-dd-content {
+	#projects-dropdown:hover .projects-dd-content {
   		display: inline-block !important;
 	}
 	
@@ -159,4 +165,5 @@
 	position: fixed;
 	top: 0;
 	width: 100%;
+	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
