Ok, for some reason i deleted the stuff i made for small screens

--- a/navbar.css
+++ b/navbar.css
@@ -126,6 +126,10 @@
 		width: 100%;
 	}
 
+	.projects-dd-content-shown {
+		display: inline-block !important;		
+	}
+
 	.projects-dd-content {
 		display: none;
 		position: absolute;
