--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,16 @@
+body {
+	background-color: rgb(240,240,240);
+	margin: 0px;
+}
+
+#name {
+	margin: 0px;
+	padding: 20px;
+	background-color: rgb(100,100,100);
+	text-align: center;
+	font-family: courier new, monospace;
+}
+
 @media (min-width:500px) {
 	#navbar {
 		background-color: rgb(50,50,50);
