--- a/contact.css
+++ b/contact.css
@@ -14,6 +14,10 @@
 	background-color: white;
 }
 
+.content-container:hover {
+	background-color: rgb(250,250,250);
+}
+
 @media(min-width:750px) {
 
 	.content-container {
