--- a/navbar.css
+++ b/navbar.css
@@ -48,7 +48,7 @@ body {
   		display: inline-block;
 	}
 
-	button {
+	#navbar button {
 		outline: none;
 		border: none;
 		background-color: rgb(0,0,0,0);
@@ -122,9 +122,11 @@ body {
 		color: rgb(240,240,240);
 	}
 
-	button {
+	#navbar button {
 		outline: none;
+		margin: 0px;
 		border: none;
+		border-bottom: 1px solid black;
 		background-color: rgb(0,0,0,0);
 		width: 100%;
 	}
