--- a/project.css
+++ b/project.css
@@ -39,7 +39,7 @@
 	position: absolute;
 	top: 0px;
 	width: 100%;
-	z-index: 10;
+	z-index: 11;
 	background-color: rgb(50,50,50,0.5);
 	display: block;
 }
@@ -78,10 +78,10 @@
 
 	#image-container img {
 		width: 100%;
-		height: auto;
+		height: 100%;
+		z-index: 10;	
+		object-fit: contain;
 		display: none;
-		margin: auto 0;
-		z-index: 10;
 	}
 
 	.gallery-image-container-show {
