--- a/project.css
+++ b/project.css
@@ -61,14 +61,14 @@
 
 	#gallery {
 		margin: 20px auto;
-		width: 400px;
-		height: 300px;
+		width: 600px;
+		height: 600px;
 		display: flex;
 	}
 
 	#image-container {
-		height: 300px;
-		width: 300px;
+		height: 600px;
+		width: 600px;
 		background-color: rgb(50,50,50);
 		overflow: hidden;
 		position: relative;
@@ -116,8 +116,8 @@
 
 	#gallery {
 		margin: 20px auto;
-		width: 75%;
-		height: 300px;
+		width: 100%;
+		height: 600px;
 		display: flex;
 	}
 
@@ -134,17 +134,15 @@
 
 	#image-container img {
 		width: 100%;
-		height: auto;
-		margin: auto 0;
+		height: 100%;	
 		display: none;
-		vertical-align: middle;	
-		position: relative;
 		z-index: 10;
+		object-fit: contain;
 	}
 
 	.gallery-button {
 		border-radius: 5px;
-		width: 50px;
+		width: 30px;
 		background-color: rgb(245,245,245,1);
 		outline: none;
 		border: none;
