--- a/navbar.css
+++ b/navbar.css
@@ -11,7 +11,13 @@ body {
 	font-family: courier new, monospace;
 }
 
+#projects-dropdown-button:hover {
+	background-color: rgb(70,70,70);
+	color: rgb(240,240,240);
+}
+
 @media (min-width:500px) {
+
 	#navbar {
 		background-color: rgb(50,50,50);
 		height: 50px;
@@ -33,9 +39,11 @@ body {
 		padding: 14px 20px;
 		text-align: center;
 		position: relative;
-		margin: 0px 30px;
+		margin: auto 30px;
 		z-index: 1;
 		font-size: 100%;
+		height: 22px;
+		top: -1px;
 	}
 
 	.nav-button:hover {
@@ -52,11 +60,16 @@ body {
 		outline: none;
 		border: none;
 		background-color: rgb(0,0,0,0);
+		height: 50px;
+		line-height: 100%;
+	}
+
+	#projects-dropdown-button {
+		top: 0px;
 	}
 
 	.projects-dd-content-shown {
 		display: block !important;
-		
 	}
 
 	.projects-dd-content {
@@ -129,6 +142,7 @@ body {
 		border-bottom: 1px solid black;
 		background-color: rgb(0,0,0,0);
 		width: 100%;
+		height: 50px;
 	}
 
 	#projects-dropdown {
