Replaced borders with shadows, and project previews now expand when hovered

--- a/index.css
+++ b/index.css
@@ -2,6 +2,10 @@
 			padding: 20px;
 		}
 
+		.project_desc {
+			display: block;
+		}
+
 		@media(max-width:750px) {
 
 			#intro {		
@@ -34,7 +38,7 @@
 				display: flex;
 				position: relative;
 			}
-			
+
 			#intro a {
 				margin: auto 0;
 			}
@@ -56,12 +60,19 @@
 
 		.content_container {
 			border-radius: 5px;
-			border: 1px solid black;
+			/* border: 1px solid black; */
 			background-color: white;
+			box-shadow: 3px 3px 20px darkgrey;
 		}
 
 		.content_container:hover {
 			background-color: rgb(250,250,250);
+		}
+
+		@media(max-width: 1300px) {
+			.project_desc {
+				display: none;
+			}
 		}
 
 		@media(min-width: 1000px) {
@@ -76,11 +87,18 @@
 				position: relative;
 				text-align: center;
 			}
-			
+
+			.project_container:hover {
+				max-width: 45%;
+				width: 45%;
+				margin: 50px auto;
+			}
+		
+			/*
 			.project_container a img:hover {
 				width: 110%;
 				height: auto;
-			}
+			}*/
 
 		}
 
