--- a/contact.css
+++ b/contact.css
@@ -9,9 +9,10 @@
 
 .content-container {
 	margin: 20px auto;
-	border-radius: 5px;
-	border: 1px solid black;
+	border-radius: 10px;
+	/*border: 1px solid black;*/
 	background-color: white;
+	box-shadow: 3px 3px 20px darkgrey;
 }
 
 .content-container:hover {
@@ -24,7 +25,6 @@
 		width: 50%;
 		margin: 20px auto;
 		border-radius: 5px;
-		border: 1px solid black;
 		background-color: white;
 		display: flex;
 	}
@@ -50,7 +50,6 @@
 		width: 75%;
 		margin: 20px auto;
 		border-radius: 5px;
-		border: 1px solid black;
 		background-color: white;
 	}
 
