--- a/project.css
+++ b/project.css
@@ -5,8 +5,9 @@
 
 .content-container {
 	border-radius: 5px;
-	border: 1px solid black;
+	/*border: 1px solid black;*/
 	background-color: white;
+	box-shadow: 3px 3px 20px darkgrey;
 }
 
 .content-container:hover {
