Increased margin of contact sections so stuff isnt so crammed together

--- a/contact.css
+++ b/contact.css
@@ -8,7 +8,7 @@
 }
 
 .content-container {
-	margin: 20px auto;
+	margin: 50px auto !important;
 	border-radius: 10px;
 	/*border: 1px solid black;*/
 	background-color: white;
