--- a/footer.css
+++ b/footer.css
@@ -8,6 +8,11 @@
 
 /* --- footer projects --- */
 
+#footer-projects {
+    width: 75%;
+    margin: 0px auto;
+}
+
 #footer-projects-header {
     font-size: 10px;
     color: rgb(200,200,200);
@@ -110,19 +115,25 @@
     float: left;
     padding: 25px 0px 25px 0px;
     width: 50%;
-    margin-right: -30px;
-    margin-left: 30px;
 }
 
-#footer-right {
+#footer-right { 
     float: right;
     padding: 25px 0px 25px 0px;
     width: 50%;
-    margin-right: -30px;
-    margin-left: 30px;
 }
 
 @media(min-width:500px) {
+
+    #footer-left { /*centering*/
+        margin-right: -5%;
+        margin-left: 5%;
+    }
+
+    #footer-right { /* centering */
+        margin-right: -5%;
+        margin-left: 5%;
+    }
 
     #centered {
         margin: 0px auto;
