--- a/project.css
+++ b/project.css
@@ -280,7 +280,7 @@
 		vertical-align: center;
 	}
 
-	.container-body a {
+	#download a {
 		display: block;
 		text-align: center;
 	}
@@ -334,7 +334,7 @@
 		font-size: 15px;
 	}
 
-	.container-body a {
+	#download a {
 		display: block;
 		text-align: center;
 	}
