--- a/project.css
+++ b/project.css
@@ -171,11 +171,19 @@
 		border-radius: 0px 5px 5px 0px;
 		border-left: 1px solid black;
 	}
+
+    #technical-info {
+        max-width: 100%
+    }
+
 }
 
 @media(max-width:750px) {
+    .content-container {
+        width: 100%;
+    }
 	#intro, #links {
-		width: 75%;
+		width: 100%;
 		margin: 25px auto 50px auto;
 		position: relative;
 	}
@@ -297,7 +305,6 @@
 @media(max-width:1100px) {
 
 	#technical-info {
-		width: 75%;
 		margin: 0 auto;
 		flex-wrap: wrap;
 	}
