--- a/index.css
+++ b/index.css
@@ -1,7 +1,12 @@
 		#primary {
 			padding: 20px;
-            height: 2000px;
 		}
+
+        #contactbar {
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
 
         .dated_activity {
             padding: 0px 30px 30px 30px;
@@ -42,36 +47,47 @@
             font-weight: bold;
         }
 
-		@media(max-width:750px) {
+        .skill_level {
+            font-size: 12px;
+        }
 
-			#intro {		
-				width: 100%;
-				margin: 5px auto 50px auto;
-				position: relative;
-			}
-			
-			#profile {
-				margin: 0 auto;	
-				padding: 10px;
-				border-radius: 30px;
-				width: 60px;
-				height: 60px;
-				display: block;
-			}
+        .icons img {
+            width: 50px;
+            height: 50px;
+            padding: 5px;
+        }
 
-			#desc {
-				font-family: verdana, sans-serif;
-				display: block;
-				padding: 10px;
-			}
-
+		.content_container {
+			border-radius: 30px;
+			/* border: 1px solid black; */
+			background-color: white;
+			box-shadow: 3px 3px 20px darkgrey;
 		}
 
-        
-		@media(min-width:750px) {
+		.content_container:hover {
+			background-color: rgb(250,250,250);
+		}
 
-			#intro {
+        .resume_container {
+            width: 100%;
+            margin: 0px auto;
+            display: flex;
+            position: relative;
+        }
+
+        .resume_container h2 {
+            padding: 20px 0px 0px 0px;
+            width: 100%;
+			font-family: verdana, sans-serif;
+            text-align: center;
+            color: #375FD7;
+		}
+
+		@media(min-width: 1000px) {
+
+            #intro {
 				width: 50%;
+                max-width: 1000px;
 				margin: 50px auto;
 				display: flex;
 				position: relative;
@@ -96,40 +112,18 @@
 			}
 
             #resume {
-                width: 75%;
+                width: 50%;
             }
-		}
 
-		.content_container {
-			border-radius: 30px;
-			/* border: 1px solid black; */
-			background-color: white;
-			box-shadow: 3px 3px 20px darkgrey;
-		}
-
-		.content_container:hover {
-			background-color: rgb(250,250,250);
-		}
-
-        .resume_container {
-            width: 100%;
-            margin: 50px auto;
-            display: flex;
-            position: relative;
-        }
-
-        .resume_container h2 {
-            padding: 20px 0px 0px 0px;
-            width: 100%;
-			font-family: verdana, sans-serif;
-            text-align: center;
-            color: #375FD7;
-		}
-
-		@media(min-width: 1000px) {
+            .dates {
+                float: right;
+                padding: 20px;
+                font-style: italic;
+            }
+            
 			.content_container {
-				width: 40%;
-				max-width: 40%;
+				width: 50%;
+				max-width: 50%;
 				min-width: 750px;
 				margin: 50px auto;
 				display: inline;
@@ -137,30 +131,99 @@
                 border-radius: 20px;
 			}
 
+            #resume {
+			    margin: 0 auto;
+			    min-width: 200px;
+                max-width: 1000px;
+			    width: 100%;
+			    display: flex;
+			    flex-wrap: wrap;
+		    }
+
 		}
 
 		@media(max-width: 1000px) {
+
+
+            #intro {		
+				width: 100%;
+				margin: 5px auto 50px auto;
+				position: relative;
+			}
+			
+			#profile {
+				margin: 0 auto;	
+				padding: 10px;
+				border-radius: 30px;
+				width: 60px;
+				height: 60px;
+				display: block;
+			}
+
+			#desc {
+				font-family: verdana, sans-serif;
+				display: block;
+				padding: 10px;
+			}
+
+            .dates {
+                float: left;
+                clear: both;
+                padding: 0px 0px 20px 0px;
+                font-size: 12px;
+                font-style: none;
+            }
+
 			.content_container {
 				width: 100%;
-				max-height: 175px;
 				max-width: 100%;
 				min-width: 200px;
-				margin: 0px auto;
+				margin: 50px auto;
 				display: block;
 				overflow: hidden;
 				position: relative;
 			}
 
+            #resume {
+			    margin: 0 auto;
+			    min-width: 200px;
+			    max-width: 100%;
+			    display: flex;
+			    flex-wrap: wrap;
+		    }
+
 		}
 
-		#resume {
-			max-height 175px;
-			margin: 0 auto;
-			min-width: 200px;
-			width: 50%;
-			display: flex;
-			flex-wrap: wrap;
-		}
+        @media(min-width: 750px) {
+            #technologies {
+                width: 50%;
+                float: right;
+            }
+
+            #languages {
+                width: 50%;
+                float: left;
+            }
+        }
+
+        @media(max-width: 750px) {
+            #technologies {
+                width: 100% !important;
+                float: left; 
+            }
+
+            #languages {
+                width: 100% !important;
+                float: left;
+            }
+
+            .icons {
+                margin: 0px auto;
+
+            }
+
+
+        }
 
         #resume_header a {
             text-decoration: None;
