--- a/contactbar.css
+++ b/contactbar.css
@@ -4,15 +4,35 @@
 
 #name {
 	margin: 0px;
-	padding: 20px;
+	padding: 20px 20px 0px 20px;
 	text-align: center;
-	font-family: courier new, monospace;
+    font-family: Helvetica, sans-serif; 
     text-align: left;
     font-size: 20px;
     color: rgb(50, 50, 50);
     font-weight: bold;
 
 }
+
+#resume {
+	margin: 0px;
+	padding-left: 20px;
+	text-align: center;
+    font-family: Helvetica, sans-serif; 
+    text-align: left;
+    font-size: 15px;
+    color: rgb(50, 50, 50);
+    font-weight: bold;
+    text-decoration: underline;
+    pointer-events: fill;
+
+}
+
+#resume a {
+    color: rgb(50, 50, 50); 
+
+}
+
 
 #contactbar {
     float: top;
@@ -60,13 +80,31 @@
 
 #name {
 	margin: 0px;
-	padding: 20px;
+	padding: 20px 20px 0px 20px;
 	text-align: center;
-	font-family: courier new, monospace;
+    font-family: Helvetica, sans-serif; 
     text-align: left;
-    font-size: 50px;
+    font-size: 20px;
     color: rgb(50, 50, 50);
     font-weight: bold;
+    font-family: Helvetica, sans-serif; 
+}
+
+#resume {
+	margin: 0px;
+	padding-left: 20px;
+	text-align: center;
+    font-family: Helvetica, sans-serif; 
+    text-align: left;
+    font-size: 15px;
+    color: rgb(50, 50, 50);
+    font-weight: bold;
+    text-decoration: underline;
+    pointer-events: fill;
+}
+
+#resume a {
+    color: rgb(50, 50, 50); 
 
 }
 
