--- a/index.css
+++ b/index.css
@@ -52,9 +52,12 @@ body {
 
 #left_button_area {
 
-    left: 0px;
+    left: -5px;
     top: 50%;
+    width: 55px;
     border-radius: 0px 25px 25px 0px;
+    background-color: #a4a4a4;
+    box-shadow: 5px 5px 0px 0px #cccccc;
 
 }
 
@@ -63,6 +66,8 @@ body {
     right: 0px;
     top: 50%;
     border-radius: 25px 0px 0px 25px;
+    background-color: #a4a4a4;
+    box-shadow: 5px 5px 0px 0px #cccccc;
 
 }
 
@@ -88,7 +93,7 @@ body {
 .content_area_container {
 
     width: 90vw;
-    padding: 100vw 5vw 0vw 5vw;
+    padding: 50vh 5vw 0vw 5vw;
     display: flex;
     flex-direction: row;
     align-items: stretch;
@@ -108,8 +113,10 @@ body {
 
 .experience-top {
 
-    box-shadow: 0 15px 15px -15px gray;
-    padding: 10px;
+    /*box-shadow: 10px 10px 0px 0px rgb(230, 230, 230);*/
+    border-radius: 15px;
+    /*border: 1px solid gray;*/
+    padding: 25px;
 
 }
 
@@ -148,7 +155,7 @@ body {
     font-family: Helvetica, sans-serif; 
     text-align: center;
     color: rgb(50, 50, 50);
-    padding-bottom: 25px;
+    /*padding-bottom: 25px;*/
     font-family: verdana, sans-serif;
     font-weight: bold;
 
@@ -174,13 +181,13 @@ ul {
 
 }
 
-#platform_transition_link {
+#wild_track_link {
 
     text-decoration: underline;
 
 }
 
-#platform_transition_link:hover {
+#wild_track_link:hover {
 
     cursor: pointer;
 
@@ -330,9 +337,9 @@ body {
     width: 50px !important;
     position: fixed;
     z-index: 1000;
-    background-color: #ffffff;
+    background-color: #e0e0e0;
     border-radius: 25px;
-    box-shadow: 0px 0px 15px 0px #aaaaaa;
+    box-shadow: 5px 5px 0px 0px #cccccc;
 
 }
 
@@ -378,7 +385,9 @@ body {
 
 .experience-top {
 
-    box-shadow: 0 15px 15px -15px gray;
+    /*box-shadow: 10px 10px 0px 0px rgb(230, 230, 230);*/
+    border-radius: 15px;
+    /*border: 1px solid gray;*/
     padding: 25px;
 
 }
@@ -409,6 +418,7 @@ body {
     text-align: center;
     color: rgb(50, 50, 50);
     padding-bottom: 25px;
+    padding-top: 25px;
     font-family: verdana, sans-serif;
     font-weight: bold;
 
@@ -475,13 +485,13 @@ body {
 
 }
 
-#platform_transition_link {
+#wild_track_link {
 
     text-decoration: underline;
 
 }
 
-#platform_transition_link:hover {
+#wild_track_link:hover {
 
     cursor: pointer;
 
